Fix icon sizes and overflow on small screens

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -12,6 +12,7 @@ a {
 	background-attachment: fixed;
 	display: flex;
 	justify-content: center;
+	overflow-x: hidden;
 }
 .app-sections {
 	width: 500px;
